0024456: Graphic3d_MaterialAspect - use static assert instead of runtime exception

Graphic3d_MaterialAspect::NumberOfMaterials() : Standard_ASSERT_RAISE instead of run-time check is now used.
Replaced with Standard_STATIC_ASSERT